--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/jest": "^29.5.2",
     "@types/uuid": "^9.0.2",
+    "class-validator": "^0.14.0",
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
     "uuid": "^9.0.0"
