--- a/package.json
+++ b/package.json
@@ -1,36 +1,16 @@
 {
-  "name": "typescript",
+  "name": "micro-videos-typescript",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "imports":{
-    "#seedwork/*":"./dir/@seedwork/*.js"
-  },
+  "workspaces":[
+    "src/@core",
+    "src/nestjs"
+  ],
   "scripts": {
-    "ts-node": "ts-node",
-    "tsc": "tsc",
-    "tsc:check":"npm run tsc -- --noEmit",
-    "pretest": "npm run tsc",
-    "test": "jest",
-    "test:cov": "jest --coverage"
+    "test": "npm run test -w @fc/micro-videos "
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@swc/core": "^1.3.62",
-    "@swc/jest": "^0.2.26",
-    "@types/lodash": "^4.14.195",
-    "@types/node": "^20.2.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
-  },
-  "dependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/uuid": "^9.0.2",
-    "class-validator": "^0.14.0",
-    "jest": "^27.5.1",
-    "lodash": "^4.17.21",
-    "uuid": "^9.0.0"
-  },
-  "description": ""
+  "license": "ISC"
 }
